# DLSA

./: .gitignore  CITATION.cff  DAS5.md  LICENSE.txt  README.md  generate_synthetic_data.py  get_job_status_curl.sh  go.mod  go.sum  pyproject.toml  pytest.ini  query_exmpl.fasta  spawn_small_job.sh  tui.py
.github/workflows/: go.yml  python.yml  rust.yml
cmd/master/: main.go  main.py  openapi.json  run.py
cmd/worker/: compile.sh  main.go
internal/smithwaterman/: bench.go  bench_test.go  go.mod  smithwaterman.go  smithwaterman_test.go  smithwaterman_util.go
internal/worker/: create_master_curl.sh  get_job_status_curl.sh  master_rest_client.go  worker.go  worker_impl.go  worker_rust_benchmark.go  worker_rust_bridge.go  worker_test.go  worker_utils.go
master/: __init__.py  main.py  run.py  settings.py  trace_time.py
master/api_models/: __init__.py  job.py  work.py  worker.py
master/job_queue/: job_queue.py  queued_job.py  test_job_queue.py
master/routers/: __init__.py  job.py  test_job.py  test_worker.py  worker.py
master/tests/: conftest.py  data.py  test_job.py  test_worker.py  time_scheduler_test.py
master/utils/: cleaner.py  interval.py  log_time.py  singleton.py  time.py  timout.py  try_until_succeeds.py  verify.py
master/work_package/: work_package_collector.py
master/worker/: worker.py  worker_collector.py
results/: 4CS4_1|Chain.txt
rust/: Cargo.toml  Makefile  build.rs
rust/benches/: local_alignment.rs  scalability_query.rs  scalability_target.rs  simd.rs
rust/header/: sw.h
rust/src/: bindings.rs  lib.rs  main.rs
rust/src/algorithm/: mod.rs
rust/src/api/: mod.rs
rust/src/bindings/: mod.rs
rust/src/worker/: benchmark.rs  mod.rs
tui/: __main__.py
utils/: fasta_file_analyzer.c  generate_synthetic_data.py  master.sh  run_das5_experiments.py  spawn_job.sh  spawn_small_job.sh  start_master.sh  start_worker.sh  sync_das5.sh  worker.sh
(+44 files in other folders)
