[package]
name = "sw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]
# path = "src/lib.rs"

[dependencies]
argminmax = "0.6.1"
crossbeam = "0.8.2"
rand = "0.8.5"
spin-sync = "0.3.2"
itertools = "0.12.0"
rayon = "1.8.0"
regex = "1.10.2"
serde = {version ="1.0.193", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json","blocking"]}
tokio = "1.35.0"
serde_json = "1.0.108"
uuid = "1.6.1"
num_cpus = "1.16.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
lto = "fat"
codegen-units = 1
# panic = "abort" We need unwind to be safe


[[bench]]
name = "local_alignment"
harness = false

[[bench]]
name = "scalability_target"
harness = false

[[bench]]
name = "scalability_query"
harness = false

[[bench]]
name = "simd"
harness = false
